# holycc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  agent.md  install.sh
build_asan/: CMakeCache.txt  Makefile  cmake_install.cmake
build_asan/runtime/: Makefile
build_asan/src/: Makefile
build_asan/tests/: Makefile  test_lexer
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_debug/runtime/: Makefile
build_debug/src/: Makefile  cmake_install.cmake
build_debug/tests/: Makefile  cmake_install.cmake  test_lexer
build_final/: CMakeCache.txt  Makefile  cmake_install.cmake
build_final/runtime/: Makefile  cmake_install.cmake
build_final/src/: Makefile
build_final/tests/: Makefile  test_lexer
build_san/: CMakeCache.txt  Makefile  cmake_install.cmake
build_san/runtime/: Makefile
build_san/src/: Makefile
build_san/tests/: Makefile  test_lexer
docs/: ARCHITECTURE.md  LANGUAGE.md
examples/: arr_simple.HC  arrays.HC  complex.HC  greeting  greeting.HC  hello  hello.HC  math.HC  mylib.HC  simple.HC  switch  switch.HC  use_import.HC  with_include.HC
include/holyc/: ast.h  codegen.h  diag.h  driver.h  lexer.h  parser.h  semantic.h  symbol.h  token.h  (+2 more)
runtime/: CMakeLists.txt  holyc_runtime.c  holyc_runtime.h
src/: CMakeLists.txt  diag.c  main.c  token.c  utils.c
src/ast/: ast.c
src/codegen/: codegen.c
src/driver/: driver.c
src/lexer/: lexer.c
src/parser/: parser.c
src/semantic/: semantic.c
src/symbol/: symbol.c
src/types/: types.c
tests/: CMakeLists.txt  test_lexer.c
